--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "json-stream-stringify": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "morgan": "^1.9.1",
+    "node-localstorage": "^2.1.6",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0",
+    "uuid": "^7.0.3"
   },
   "author": "",
   "license": "ISC",
